tests/paczka1/small_fuzzy/63676634.err
Error in line 2: A869 A869 97,8
Error in line 5: 1NwZMRxx8WN S156 6,5
